# ai-career-assistant

./: .env.example  .gitignore  README.md  main.py  orchestrator.py  pipeline.py  presentation.pptx  pyproject.toml
agent_tools/: arbeitnow.py  http_client.py  remotive.py
agents/: aggregator.py  arbeitnow_matcher.py  matcher.py  ranking.py  remotive_matcher.py  resume_generator.py  resume_parser.py
apis/: arbeitnow.py  remotive.py
career_agents/: aggregator.py  arbeitnow_matcher.py  orchestrator.py  ranking.py  remotive_matcher.py  resume_parser.py  resume_tailor.py
career_assistant/: main.py
career_assistant/agent_tools/: remotive.py
career_assistant/agents/: aggregator.py  arbeitnow_matcher.py  job_fallback.py  matcher_shared.py  remotive_matcher.py  resume_parser.py  resume_tailor.py
career_assistant/ui/: app.css  render_html.py
career_assistant/ui/html/: draft_preview_label.html  header.html  no_jobs.html
career_assistant/utils/: agent_llm_kw.py  async_bridge.py  documents.py  job_api_cache.py  job_recency.py  job_relevance_filter.py  llm_payload.py  profile_storage.py  settings.py
data/: JOHN DOE.docx  resume.docx  resume.txt
docs/: APP_FLOW_AND_ARCHITECTURE.md  presentation.pptx
scripts/: gen_architecture_pdf.py  rebuild_app_css.py
tools/: arbeitnow_tool.py  remotive_tool.py
ui/: app.py  gradio_app.py  job_ui_utils.py  render_html.py
ui/html/: alert.html  empty_profile.html  job_card.html  profile_card.html  profile_preview_label.html  section.html
utils/: agent_llm_kw.py  async_bridge.py  documents.py  job_api_cache.py  job_fallback.py  job_recency.py  job_relevance_filter.py  llm_payload.py  matcher_shared.py  pdf_reader.py  profile_storage.py  settings.py
